Z-index fix for happy birthday text

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@
     width: 80%;
     top: 20%;
     left: 10%;
-    z-index: 1000;
+    z-index: 80;
 }
 #white-doggo {
     position: absolute;
